2024-09-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.4

2024-09-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version

2024-09-16  James Yang  <jamesyang916@gmail.com>

	* inst/include/fastad_bits/forward/core/forward.hpp: Properly address
	clang warning on empty variadic macros arguments

	* src/Makevars (CXX_STD): Switch back to C++17
	* src/Makevars.win (CXX_STD): Idem

2024-09-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.3

	* src/Makevars (CXX_STD): Use C++20
	* src/Makevars.win (CXX_STD): Idem

2024-05-22  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Use tinyverse.netlify.app for dependency badge

2024-03-04  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4,
	add r-ci-setup actions

2023-03-05  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.2

2023-03-03  James Yang  <jamesyang916@gmail.com>

	* src/linear_regression.cpp (linear_regression): Further
	simplification
	* src/quadratic_expression.cpp (quadratic_expression): Idem

2023-03-03  Dirk Eddelbuettel  <edd@debian.org>

	* src/linear_regression.cpp (linear_regression): Return theta
	and gradient as vectors instead of (oversized) matrices
	* src/quadratic_expression.cpp (quadratic_expression): Return
	scalar and vector instead of two (oversized) matrices
	* inst/tinytest/test_quadratic_expression.R: Adjusted

2023-03-02  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_black_scholes.R: Renamed
	* inst/quadratic_expression.R: New tests
	* inst/linear_regression.R: New tests

2023-03-01  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/fastad_bits/reverse/core/value_view.hpp: Protect
	one expression from nullptr

2023-02-28  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL, BugReports): Added

2023-02-27  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Additional badges
